# turtlebot3_llm_semantic_navigation

./: .gitignore  README.md
ros2_ws/src/tb3_llm_controller/: package.xml  setup.cfg  setup.py
ros2_ws/src/tb3_llm_controller/config/: semantic_places.yaml
ros2_ws/src/tb3_llm_controller/launch/: tb3_semantic_world.launch.py
ros2_ws/src/tb3_llm_controller/srv/: GoToPose.srv
ros2_ws/src/tb3_llm_controller/tb3_llm_controller/: gemini_planner.py  llm_controller.py  llm_nav_bridge.py  nav2_client.py  place_nav_client.py  semantic_place_bridge.py  simple_script_controller.py
ros2_ws/src/tb3_llm_controller/urdf/: tb3_with_cam.urdf
ros2_ws/src/tb3_llm_controller/worlds/: semantic_room.world
